--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget1/mixed-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget1/mixed-widget1.component.html
@@ -168,7 +168,7 @@
                     <table class="table table-centered table-nowrap" style="border-collapse: collapse; border: 1px solid black;">
                       <thead style="border-width: 1px; border-color: #000;">
                         <tr>
-                          <th style="border-width: 1px; border-color: #000;"><b>Khata </b></th>
+                          <th style="border-width: 1px; border-color: #000;"><b>&nbsp;&nbsp;Khata </b></th>
                           <th style="border-width: 1px; border-color: #000;"><b>Person Name</b></th>
                           <th style="border-width: 1px; border-color: #000;"><b>Phone Number</b></th>
                           <th style="border-width: 1px; border-color: #000;"><b>Bill Nos. Set</b></th>
