--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget2/tables-widget2.component.html
@@ -17,14 +17,13 @@
   <!-- begin::Table container -->
   <div class="table-responsive">
     <!-- begin::Table -->
-    <table class="table align-middle gs-0 gy-5">
-      <!-- begin::Table head -->
-      <thead>
-        <tr class="fw-bolder">
-          <th class="p-0 min-w-100px"><b>Product</b></th>
-          <th class="p-0 min-w-100px"><b>Tank</b></th>
-          <th class="p-0 min-w-100px"><b>Pump</b></th>
-          <th class="p-0 min-w-100px"><b>Nozzle</b></th>
+    <table class="table table-hover table-striped">
+      <thead class="table-light">
+        <tr>
+          <th style="text-align: left;"><b>Product</b></th>
+          <th style="text-align: left;"><b>Tank</b></th>
+          <th style="text-align: left;"><b>Pump</b></th>
+          <th style="text-align: left;"><b>Nozzle</b></th>
         </tr>
       </thead>
       <!-- end::Table head -->
