--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
@@ -167,7 +167,9 @@
                     </div>
 
                     <div class="row">
-                        <div class=" col-md-6 search-box d-inline-block">
+                        <div class="col-md-1"></div>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <div class="col-md-4 search-box d-inline-block">
                             <div class="position-relative">
                                 <input class="form-control" type="text" (input)="onSearch()" placeholder="Search Customer Name"
                                     [(ngModel)]="searchData" [ngModelOptions]="{standalone: true}">
