--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
@@ -143,16 +143,15 @@
   <!-- begin::Table container -->
   <div class="table-responsive">
     <!-- begin::Table -->
-    <table class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4">
-      <!-- begin::Table head -->
-      <thead>
+    <table class="table table-hover table-striped">
+      <thead class="table-light">
         <tr class="fw-bolder">
-          <th class="min-w-50px">#</th>
-          <th class="min-w-150px">POS Type</th>
-          <th class="min-w-150px">POS Name</th>
-          <th class="min-w-150px">Linked Bank</th>
-          <th class="min-w-150px">Mapping</th>
-          <th class="min-w-100px text-left">Actions</th>
+          <th style="text-align: left;"><b>#</b></th>
+          <th style="text-align: left;"><b>POS Type</b></th>
+          <th style="text-align: left;"><b>POS Name</b></th>
+          <th style="text-align: left;"><b>Linked Bank</b></th>
+          <th style="text-align: left;"><b>Mapping</b></th>
+          <th style="text-align: left;"><b>Actions</b></th>
         </tr>
       </thead>
       <!-- end::Table head -->
@@ -243,7 +242,7 @@
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5">
-              <label class="labelNewMargin">Terminal Name:</label>
+              <label class="labelNewMargin"><b>Terminal Name:</b></label>
             </div>
             <div class="col-md-6">
               <input class="form-control"
@@ -255,7 +254,7 @@
           <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-5">
-              <label class="labelNewMargin">Select Account:</label>
+              <label class="labelNewMargin"><b>Select Account:</b></label>
             </div>
             <div class="col-md-6">
               <span *ngIf="isOILCOUpdate">
