--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget14/feeds-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget14/feeds-widget14.component.html
@@ -280,7 +280,7 @@
                                     <th style="text-align: left;"><b> Paid From </b></th>
                                     <th style="text-align: left;"><b> Paid To </b></th>
                                     <th style="text-align: left;"><b> Amount</b></th>
-                                    <th style="text-align: left;"><b> action</b></th>
+                                    <th style="text-align: left;"><b> Action</b></th>
                                 </tr>
                             </thead>
                             <tbody *ngFor="let data of reportData; let i = index;">
