--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget14/mixed-widget14.component.html
@@ -17,9 +17,9 @@
             ngxPrint>print </button> 
 
         </div>
-
+        <br>
         <div id="sanjay">
-            <div class="container col-12 mr-2 px-1 py-1 container border border-success">
+            <div class="container col-md-12 mr-2 px-1 py-1 container border border-success">
                 <div class="col-12 mr-2 px-1 py-1 container border border-success" id="htmlData">
                     <div class="border border-success alert alert-secondary">
                         <div class="row px-4 py-2"> 
