--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget5/lists-widget5.component.html
@@ -1502,6 +1502,7 @@
                   </tr>
                 </thead>
                 <tbody *ngFor="let charges of CreditRequestDataArray1Update; let i = index;">
+                  &nbsp;
                   <tr>
                     <td style="text-align: center;">
                       <select class="form-select" [(ngModel)]="charges.pumpNozzle" [ngModelOptions]="{standalone: true}"
