--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget11/mixed-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget11/mixed-widget11.component.html
@@ -8,7 +8,7 @@
   <div class="row">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <div class="col-lg-3">
-      <input class="form-control" type="text" list="allCorporateList" placeholder="select customer"
+      <input class="form-control" type="text" list="allCorporateList" placeholder="Select Customer"
         formControlName="customer" (change)="getDetailsByCustomerName($event)">
       <datalist id="allCorporateList">
         <option *ngFor="let data of allCorporateList" [value]="data.companyName">
