--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget5/mixed-widget5.component.html
@@ -177,7 +177,7 @@
       </div>
       <div class="row">
         <div class="col-lg-3">
-          <input class="form-control" type="text" list="allCorporateList" placeholder="select customer"
+          <input class="form-control" type="text" list="allCorporateList" placeholder="Select Customer"
             formControlName="customerName" (change)="getDetailsByCustomerName($event)">
           <datalist id="allCorporateList">
             <option *ngFor="let data of allCorporateList" [value]="data.companyName">
