--- a/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/feeds/feeds-widget11/feeds-widget11.component.html
@@ -1,47 +1,3 @@
-<style>
-  .A4 {
-  background: white;
-  width: 23cm;
-  height: 40.7cm;
-  display: block;
-  margin: 0 auto;
-  padding: 1px 1px;
-  margin-bottom: 0.5cm;
-  box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
-  
-  box-sizing: border-box;
-  font-size: 12pt;
-  /* //line-height:normal; */
-}
-
-@media print {
-  .page-break {
-    display: block;
-    page-break-before: always;
-  
-  size: A4 portrait;}
-}
-
-@media print {
-  body {
-    margin: 0;
-    padding: 0;
-    /* -webkit-print-color-adjust: exact; */
-  }
-  .A4 {
-    box-shadow: none;
-    margin: 0;
-    width: auto;
-    height: auto;
-  }
-  .noprint {
-    display: none;
-  }
-  .print {
-    display: block;
-  }
-}
-</style>
 
 <!DOCTYPE html
   PUBLIC "-//W3C//Dth XHTML 1.0 Transitional//EN" "https://www.w3.org/TR/xhtml1/Dth/xhtml1-transitional.dth">
@@ -55,7 +11,51 @@
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/jquery-1.3.2.min1.js'></script>
   <script type='text/javascript' src='../../../../../../assets/EditableInvoice/js/example1.js'></script>
-
+  <style>
+    .A4 {
+    background: white;
+    width: 23cm;
+    height: 40.7cm;
+    display: block;
+    margin: 0 auto;
+    padding: 1px 1px;
+    margin-bottom: 0.5cm;
+    box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+    
+    box-sizing: border-box;
+    font-size: 12pt;
+    /* //line-height:normal; */
+  }
+  
+  @media print {
+    .page-break {
+      display: block;
+      page-break-before: always;
+    
+    size: A4 portrait;}
+  }
+  
+  @media print {
+    body {
+      margin: 0;
+      padding: 0;
+      /* -webkit-print-color-adjust: exact; */
+    }
+    .A4 {
+      box-shadow: none;
+      margin: 0;
+      width: auto;
+      height: auto;
+    }
+    .noprint {
+      display: none;
+    }
+    .print {
+      display: block;
+    }
+  }
+  </style>
+  
 </head>
 
 <body id="contentToConvert">
@@ -108,7 +108,7 @@
       <div class="print" id="sanjay">
         <div class="container">
           <div class="row">
-            <div class="col-12 mr-2 px-1 py-1 container border-black" id="htmlData">
+            <div class="col-md-12 mr-2 px-1 py-1 container border-black" id="htmlData">
               <table id="excel-table" class="table main-table">
                 <thead>
                   <tr>
